# cmake_template

./: CMakeLists.txt  build.sh  common.cmake  dockerfile
src/: CMakeLists.txt
src/executable_application/: CMakeLists.txt  main.cpp
src/some_lib1/: CMakeLists.txt  lib1.cpp  lib1.h
src/some_lib2/: CMakeLists.txt  lib2.cpp  lib2.h
test/: CMakeLists.txt
test/executable_application/: CMakeLists.txt
test/some_lib1/: CMakeLists.txt  some_lib1_test.cpp
test/some_lib2/: CMakeLists.txt
